--- a/style.css
+++ b/style.css
@@ -1,7 +1,45 @@
+body{
+   
+    background-size: cover;
+
+    background-image:url("https://images.unsplash.com/photo-1559509547-cebb0e1da8da?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTZ8fGJsdWUlMjBza3l8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60");
+
+    background-repeat: no-repeat;
+}
 .error{
     color:red;
 }
 #heading{
+    color:white;
+    margin-top: 20px;
     text-align: center;
     font-size: 2.5em;
+}
+h2{
+    text-align: center;
+    color: white;
+}
+.zmanInfo{
+    font-size: 1.2em;
+}
+
+.location1{
+    margin-top: 20px;
+    background:rgba(255,255,255,.2);
+    width: 60%;
+}
+.whiteBackground{
+    background:rgba(255,255,255,.2);
+    width: 60%;
+}
+.zip{
+    padding: 5px;
+    border-radius: 10px;
+    border: thick double #32a1ce;
+}
+.footer{
+    color: rgba(0,0,0,.5);
+    text-align: center;
+    font-size: 16px;
+    margin-top: 200px;
 }
