--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
     text-align: center;
     font-size: 2.5em;
 }
-h2{
+h3{
     text-align: center;
     color: white;
 }
@@ -29,6 +29,11 @@ h2{
 }
 .whiteBackground{
     background:rgba(255,255,255,.2);
+    padding: 3px;
+
+}
+.noBackground{
+    padding: 3px;
 }
 
 .zip{
