--- a/style.css
+++ b/style.css
@@ -47,3 +47,8 @@ h3{
     font-size: 16px;
     margin-top: 200px;
 }
+.credit{
+    color: rgba(0,0,0,.5);
+    text-align: center;
+    font-size: 16px;
+}
